force-app/main/default/objects/ExamTypes__c/ExamTypes__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Exam Type</label>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>