force-app/main/default/objects/ExamTypes__c/fields/AutoTerminateifnotPassed__c.field-meta.xml
<CustomField>
    <fullName>AutoTerminateifnotPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN091319 - Created for PVL Phase 1</description>
    <inlineHelpText>If this exam is not passed, when Complete Exam By Date = Yesterday, set APP status to HD - Application Terminated</inlineHelpText>
    <label>Auto Terminate if not Passed</label>
    <type>Checkbox</type>
</CustomField>