force-app/main/default/objects/ExamTypes__c/fields/DurationofTestEligibilityMonths__c.field-meta.xml
<CustomField>
    <fullName>DurationofTestEligibilityMonths__c</fullName>
    <inlineHelpText>Enter the number of months the candidate has to take the exam from when they are made eligible.</inlineHelpText>
    <label>Duration of Test Eligibility (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>