force-app/main/default/objects/ExamTypes__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Exam Types</relationshipLabel>
    <relationshipName>Exam_Types</relationshipName>
    <type>Lookup</type>
</CustomField>