force-app/main/default/objects/ExamTypes__c/fields/NumberofFailedAttemptAllowed__c.field-meta.xml
<CustomField>
    <fullName>NumberofFailedAttemptAllowed__c</fullName>
    <label>Number of Failed Attempt Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>