force-app/main/default/objects/ExamTypes__c/fields/PSIExamCode__c.field-meta.xml
<CustomField>
    <fullName>PSIExamCode__c</fullName>
    <label>PSI Exam Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>