force-app/main/default/objects/ExamTypes__c/fields/TestingVendors__c.field-meta.xml
<CustomField>
    <fullName>TestingVendors__c</fullName>
    <inlineHelpText>This controls the Exam Eligibility Interface. Test Vendors designated here will automatically receive test eligibility from Ho&apos;ala.</inlineHelpText>
    <label>Testing Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>Pearson Vue</fullName>
            </value>
            <value>
                <fullName>Prometric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>