force-app/main/default/objects/ExamTypes__c/fields/WaitingPeriodUponFailedExam__c.field-meta.xml
<CustomField>
    <fullName>WaitingPeriodUponFailedExam__c</fullName>
    <description>JF 2/16/24: Created to indicate the waiting period to take the next exam when there is a failed exam result</description>
    <label>Waiting Period Upon Failed Exam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>